# Embedded-Motion-Planning-for-Dual-Arm-Robotic-Assembly-in-ROS-2

./: README.md  gripper_remote_control.urscript  token.txt
Various/: frames_2025-06-14_17.28.49.gv
attachments/tutorial_shapes/urdf_tutorial/: package.xml
environment/: package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/environment/share/environment/: local_setup.sh  package.sh
install/moveit_config/share/moveit_config/: local_setup.sh  package.sh
install/moveit_config/share/moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  my_robot_cell.srdf
install/my_robot_cell_control/share/my_robot_cell_control/: local_setup.sh  package.sh
install/my_robot_cell_description/share/my_robot_cell_description/: local_setup.sh  package.sh
install/screwdriver_description/share/screwdriver_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_description/share/ur_description/: package.sh
install/ur_simulation_gz/share/ur_simulation_gz/: package.sh
install/urdf_tutorial/share/urdf_tutorial/: package.sh
log/: latest_build
motion_planning/: coordinates.py  test.py
src/: README.MD
src/Dual_arm_motion_planning/: tree.txt
src/Dual_arm_motion_planning/my_robot_cell/motion_planning/: CMakeLists.txt  README.md  package.xml
src/Dual_arm_motion_planning/my_robot_cell/motion_planning/config/: motion_planning_python_api.yaml
src/Dual_arm_motion_planning/my_robot_cell/motion_planning/scripts/: motion_planning_python_api.py  pick_and_place_example.py  publisher_node.py
src/Dual_arm_motion_planning/my_robot_cell/moveit_config/: .setup_assistant  README.md  package.xml
src/Dual_arm_motion_planning/my_robot_cell/my_robot_cell_control/: README.md  package.xml
src/Dual_arm_motion_planning/my_robot_cell/my_robot_cell_description/: README.md  package.xml
src/Universal_Robots_ROS2_Driver/: README.md
src/Universal_Robots_ROS2_Driver/.github/dockerursim/: build_and_run_docker_ursim.sh
src/Universal_Robots_ROS2_Driver/.github/workflows/: foxy-binary-build.yml
src/Universal_Robots_ROS2_Driver/ur_calibration/doc/: usage.rst
src/Universal_Robots_ROS2_Driver/ur_robot_driver/doc/: setup_tool_communication.rst
src/Universal_Robots_ROS2_Driver/ur_robot_driver/scripts/: tool_communication.py  wait_dashboard_server.sh
src/Universal_Robots_ROS2_Driver/ur_robot_driver/src/: dashboard_client_node.cpp  robot_state_helper.cpp
src/Universal_Robots_ROS2_Driver/ur_robot_driver/test/: launch_args.py  test_common.py  urscript_interface.py
src/Universal_Robots_ROS2_Tutorials/: README.md
src/Universal_Robots_ROS2_Tutorials/my_robot_cell/motion_planning/: CMakeLists.txt  package.xml
src/Universal_Robots_ROS2_Tutorials/my_robot_cell/motion_planning/config/: motion_planning_python_api.yaml
src/Universal_Robots_ROS2_Tutorials/my_robot_cell/motion_planning/scripts/: motion_planning_python_api copy.py  motion_planning_python_api.py  pick_place_god.py  pick_place_master.py  publisher_node.py
src/Universal_Robots_ROS2_Tutorials/my_robot_cell/moveit_config/: .setup_assistant  package.xml
src/attachments/screwdriver_description/: CMakeLists.txt  package.xml
src/attachments/screwdriver_description/launch/: display.launch.py
src/attachments/screwdriver_description/urdf/: screwdriver.urdf
src/robots/: documentation.txt
src/ur5e_specific/my_robot_cell/moveit_config/: .setup_assistant
src/ur_client_library/.github/workflows/: ci.yml
src/ur_client_library/doc/: installation.rst
src/ur_client_library/doc/setup/: network_setup.rst  ursim_docker.rst
src/ur_client_library/examples/: dashboard_example.cpp  force_mode_example.cpp  freedrive_example.cpp  full_driver.cpp  instruction_executor.cpp  primary_pipeline.cpp  primary_pipeline_calibration.cpp  rtde_client.cpp  spline_example.cpp  tool_contact_example.cpp  trajectory_point_interface.cpp
src/ur_client_library/include/ur_client_library/: example_robot_wrapper.h
src/ur_client_library/scripts/: start_ursim.sh
src/ur_client_library/tests/: CMakeLists.txt  test_dashboard_client.cpp  test_deprecated_ur_driver_construction.cpp  test_instruction_executor.cpp  test_primary_client.cpp  test_rtde_client.cpp  test_spline_interpolation.cpp  test_ur_driver.cpp
(+50 files in other folders)
