<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_planning</name>
  <version>0.0.1</version>
  <description>Motion planning package for UR robot</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>moveit_py</depend>
  <depend>moveit_core</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>moveit_ros_benchmarks</depend>
  <depend>moveit_ros_planning_scene</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_control_interface</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
